Update javac profile
Signed-off-by: Snjezana Peco <snjezana.peco@redhat.com>